:sparkles: pojo、mapper、*Mapper.xml

--- a/foodie-api/src/main/resources/application.yml
+++ b/foodie-api/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
     hikari:
       connection-timeout: 30000       # 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException， 默认:30秒
       minimum-idle: 5                 # 最小连接数
-      maximum-pool-size: 20           # 最大连接数
+      maximum-pool-size: 20           # 最大连接数 最大连接数并不越大越好，需要配合服务器硬件设置
       auto-commit: true               # 自动提交开启
       idle-timeout: 600000            # 连接超时的最大时长（毫秒），超时则被释放（retired），默认:10分钟
       pool-name: DateSourceHikariCP   # 连接池名字
@@ -40,3 +40,13 @@ mybatis:
   type-aliases-package: com.o0u0o.pojo      # 所有 POJO 类所在包路径
   mapper-locations: classpath:mapper/*.xml  # mapper 映射文件
 
+############################################################
+#
+# mybatis mapper 配置
+#
+############################################################
+# 通用 Mapper 配置
+mapper:
+  mappers: com.o0u0o.my.mapper.MyMapper
+  not-empty: false
+  identity: MYSQL
