--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
             <version>1.3.2</version>
         </dependency>
 
-        <!-- swagger2 配置 -->
+        <!-- swagger2 配置 START -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -132,6 +132,7 @@
             <artifactId>swagger-bootstrap-ui</artifactId>
             <version>1.6</version>
         </dependency>
+        <!-- swagger2 配置 END -->
 
         <!--引入日志依赖 抽象层 与 实现层-->
         <dependency>
