--- a/foodie-api/src/main/resources/log4j.properties
+++ b/foodie-api/src/main/resources/log4j.properties
@@ -1,15 +1,19 @@
 log4j.rootLogger=DEBUG,stdout,file
 log4j.additivity.org.apache=true
 
+# 控制台方式打印日志
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#日志级别显示
 log4j.appender.stdout.threshold=INFO
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#日志的展示形式，去掉了年月日时分秒
 log4j.appender.stdout.layout.ConversionPattern=%-5p %c{1}:%L - %m%n
 
+#每日滚动文件，日志会以天为单位进行日志的保存
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH-mm
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.file.Threshold=INFO
 log4j.appender.file.append=true
-log4j.appender.file.File=/Users/mac/logs/foodie-api/imooc.log
+log4j.appender.file.File=/Users/mac/logs/foodie-api/foodie.log
