--- a/foodie-api/src/main/resources/application.yml
+++ b/foodie-api/src/main/resources/application.yml
@@ -52,3 +52,7 @@ mapper:
   mappers: com.o0u0o.my.mapper.MyMapper
   not-empty: false
   identity: MYSQL
+# 分页插件配置
+pagehelper:
+  helperDialect: mysql
+  supportMethodsArguments: true
