--- a/foodie-api/src/main/resources/application-dev.yml
+++ b/foodie-api/src/main/resources/application-dev.yml
@@ -5,6 +5,11 @@ spring:
   datasource:                                           # 数据源的相关配置
     url: jdbc:mysql://localhost:3306/foodie-shop?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
     password: Mysql8.0
+  redis:
+    database: 3
+    host: 118.24.74.61
+    port: 6379
+    password: puEYGSomuUP65KU6
 
 mybatis:
   configuration:
