--- a/foodie-payment/src/main/resources/alipay.properties
+++ b/foodie-payment/src/main/resources/alipay.properties
@@ -7,7 +7,8 @@ alipay.alipayPublicKey=Bgkq164UdIS4/T3XamGmxPX/VUgxikfvLav6N/O+EA85Pm4Mb/ujg8IDA
 
 # \u670D\u52A1\u5668\u5F02\u6B65\u901A\u77E5\u9875\u9762\u8DEF\u5F84  \u9700http://\u683C\u5F0F\u7684\u5B8C\u6574\u8DEF\u5F84\uFF0C\u4E0D\u80FD\u52A0?id=123\u8FD9\u7C7B\u81EA\u5B9A\u4E49\u53C2\u6570\uFF0C\u5FC5\u987B\u5916\u7F51\u53EF\u4EE5\u6B63\u5E38\u8BBF\u95EE
 #alipay.notifyUrl=http://2r49yp.natappfree.cc/payment/notice/alipay
-alipay.notifyUrl=http://payment.t.mukewang.com/foodie-payment/payment/notice/alipay
+#alipay.notifyUrl=http://payment.t.mukewang.com/foodie-payment/payment/notice/alipay
+alipay.notifyUrl=http://isale.natapp1.cc/foodie-payment/payment/notice/alipay
 # \u9875\u9762\u8DF3\u8F6C\u540C\u6B65\u901A\u77E5\u9875\u9762\u8DEF\u5F84 \u9700http://\u683C\u5F0F\u7684\u5B8C\u6574\u8DEF\u5F84\uFF0C\u4E0D\u80FD\u52A0?id=123\u8FD9\u7C7B\u81EA\u5B9A\u4E49\u53C2\u6570\uFF0C\u5FC5\u987B\u5916\u7F51\u53EF\u4EE5\u6B63\u5E38\u8BBF\u95EE
 alipay.returnUrl=http://payment.t.mukewang.com/foodie-payment/alipayResult
 #alipay.returnUrl=http://shop.t.mukewang.com/foodie-payment
