--- a/foodie-api/src/main/resources/file-upload-dev.properties
+++ b/foodie-api/src/main/resources/file-upload-dev.properties
@@ -1,2 +1,2 @@
 file.imageUserFaceLocation=/Users/mac/images/foodie/faces
-file.imageServerUrl=http://localhost:8088/foodie/faces
+file.fileImageServerUrl=http://localhost:8088/foodie/faces
