--- a/foodie-api/src/main/resources/log4j.properties
+++ b/foodie-api/src/main/resources/log4j.properties
@@ -1,19 +1,19 @@
 log4j.rootLogger=DEBUG,stdout,file
 log4j.additivity.org.apache=true
 
-# 控制台方式打印日志
+# \u63A7\u5236\u53F0\u65B9\u5F0F\u6253\u5370\u65E5\u5FD7
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#日志级别显示
+#\u65E5\u5FD7\u7EA7\u522B\u663E\u793A
 log4j.appender.stdout.threshold=INFO
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#日志的展示形式，去掉了年月日时分秒
+#\u65E5\u5FD7\u7684\u5C55\u793A\u5F62\u5F0F\uFF0C\u53BB\u6389\u4E86\u5E74\u6708\u65E5\u65F6\u5206\u79D2
 log4j.appender.stdout.layout.ConversionPattern=%-5p %c{1}:%L - %m%n
 
-#每日滚动文件，日志会以天为单位进行日志的保存
+#\u6BCF\u65E5\u6EDA\u52A8\u6587\u4EF6\uFF0C\u65E5\u5FD7\u4F1A\u4EE5\u5929\u4E3A\u5355\u4F4D\u8FDB\u884C\u65E5\u5FD7\u7684\u4FDD\u5B58
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH-mm
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.file.Threshold=INFO
 log4j.appender.file.append=true
-log4j.appender.file.File=/Users/mac/logs/foodie-api/foodie.log
+log4j.appender.file.File=/Users/o0u0o/logs/foodie-api/foodie.log
