--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- 引入 redis 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
