:apple: 引入基于redis作为spring session

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,18 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- 引入spring-session 依赖（需要引入引入spring安全框架） -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
+        <!-- 引入spring安全框架 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!-- 引入 redis 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
